chore: update en.json localization file

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -184,6 +184,7 @@
     "Offer repair, maintenance, and upgrades, relying on the DPP for product history and part details": {
       "": "Offer repair, maintenance, and upgrades, relying on the DPP for product history and part details."
     },
+    "Our Repository": "Our Repository",
     "Paid no fees thanks to IOTA Gas Station": "Paid no fees thanks to IOTA Gas Station",
     "Perform Diagnostics": "Perform Diagnostics",
     "Please make sure you are connected to the IOTA testnet": {
@@ -220,6 +221,7 @@
     "Recyclers": "Recyclers",
     "Recycling Reward": "Recycling Reward",
     "repairer": "repairer",
+    "Repository": "Repository",
     "Request": "Request",
     "Request Access": "Request Access",
     "Request Service Network Access": "Request Service Network Access",
